Add form to visit view

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,1 +1,11 @@
-<h2> Тут можно записаться на прием. </h2>
+<h2> Записаться </h2>
+<p> Тут можно записаться в наш Barber Shop!</p>
+
+<form>
+  <div class="form-group">
+    <label>Ваше имя:</label>
+    <input name="username" type="text" class="form-controll" placeholder="Введите Ваше имя"> <br/>
+    </div>
+<button type="submit" class="btn btn-primary">Записаться</button>
+
+</form>
