--- a/views/visit.erb
+++ b/views/visit.erb
@@ -3,9 +3,20 @@
 
 <form>
   <div class="form-group">
-    <label>Ваше имя:</label>
+    <label>Ваше имя:</label><br/>
     <input name="username" type="text" class="form-controll" placeholder="Введите Ваше имя"> <br/>
     </div>
+
+     <div class="form-group">
+    <label>Ваш телефон:</label><br/>
+    <input name="phone" type="text" class="form-controll" placeholder="Введите Ваше имя"> <br/>
+    </div>
+
+     <div class="form-group">
+    <label>Когда Вас ожидать:</label><br/>
+    <input name="datetime" type="text" class="form-controll" placeholder="Введите дату и время"> <br/>
+    </div>
+
 <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
