Add image master-cuthear

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,6 +1,7 @@
 <h2> Записаться </h2>
 <p> Тут можно записаться в наш Barber Shop!</p>
 
+
 <form>
   <div class="form-group">
     <label>Ваше имя:</label><br/>
@@ -17,6 +18,15 @@
     <input name="datetime" type="text" class="form-controll" placeholder="Введите дату и время"> <br/>
     </div>
 
-<button type="submit" class="btn btn-primary">Записаться</button>
+<button type="submit" class="btn btn-primary">Записаться</button> <br/>
+
+<div class="card" style="width: 20rem;">
+  <img class="card-img-top" data-src="C:\Users\Aleks\Pictures\maggie-4.png\" alt="Card image cap">
+  <div class="card-body">
+    <h4 class="card-title">Иванова Лариса Ивановна</h4>
+    <p class="card-text">Мастер по укладке женских причесок, а также покраске и ламинированию.</p>
+    <a href="#" class="btn btn-primary">Выбрать мастера</a>
+  </div>
+</div>
 
 </form>
