Add skil for master

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -24,7 +24,7 @@
   <img class="card-img-top" data-src="C:\Users\Aleks\Pictures\maggie-4.png\" alt="Card image cap">
   <div class="card-body">
     <h4 class="card-title">Иванова Лариса Ивановна</h4>
-    <p class="card-text">Мастер по укладке женских причесок, а также покраске и ламинированию.</p>
+    <p class="card-text">Мастер по укладке женских причесок, а также покрасить и заламинировать.</p>
     <a href="#" class="btn btn-primary">Выбрать мастера</a>
   </div>
 </div>
