Add list of heardresser

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -17,6 +17,16 @@
     <label>Когда Вас ожидать:</label><br/>
     <input name="datetime" type="text" class="form-controll" placeholder="Введите дату и время"> <br/>
     </div>
+<div class="form-group">
+    <label for="exampleFormControlSelect1">Выбирайте мастера в списке ниже:</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Альвина</option>
+      <option>Виктория</option>
+      <option>Даша</option>
+      <option>Ирина</option>
+      <option>Катя</option>
+    </select>
+  </div>
 
 <button type="submit" class="btn btn-primary">Записаться</button> <br/>
 
